istio_dz/istio/peerauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: muffin-mtls-strict
  namespace: muffin
spec:
  mtls:
    mode: STRICT
